--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,5 @@
 .introducao-bg {
-  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat
-    bottom 160px left 20px;
+  background: var(--cor-12) bottom 160px left 20px;
   box-shadow: inset 0 -120px var(--cor-1);
 }
 
@@ -28,26 +27,4 @@
 
 .introducao p {
   margin-bottom: 20px;
-}
-
-@media (max-width: 800px) {
-  .introducao-bg {
-    background: var(--cor-11);
-    padding-top: 40px;
-    box-shadow: inset 0 -60px #ffffff;
-  }
-  .introducao {
-    grid-template-columns: 1fr;
-    gap: 32px;
-  }
-  .introducao-conteudo {
-    padding-bottom: 0px;
-  }
-  .introducao h1 {
-    margin-bottom: 16px;
-  }
-  .introducao img {
-    height: 300px;
-    width: 100%;
-  }
 }
