--- a/css/utilidades/formulario.css
+++ b/css/utilidades/formulario.css
@@ -6,7 +6,9 @@
 
 .form label {
   display: block;
-  font: 400 1rem/1.5 "Poppins", sans-serif;
+  font:
+    400 1rem/1.5 "Poppins",
+    sans-serif;
   margin-bottom: 4px;
 }
 
@@ -17,7 +19,9 @@
 .form input[type="text"],
 .form input[type="email"],
 .form textarea {
-  font: 400 1rem/1.5 "Roboto", sans-serif;
+  font:
+    400 1rem/1.5 "Roboto",
+    sans-serif;
   background: var(--cor-1);
   border: 1px solid var(--cor-2);
   padding: 12px;
@@ -33,13 +37,4 @@
   border-color: var(--cor-p1);
   background: var(--cor-0);
   box-shadow: 0 0 0 2px #fea;
-}
-
-@media (max-width: 600px) {
-  .form {
-    grid-template-columns: 1fr;
-  }
-  .form .col-2 {
-    grid-column: 1;
-  }
 }
